--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,11 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+div{
+  margin: auto;
+  background-color: #0f0f0f18;
+  padding: 1rem;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
